     - added missing contact button
     - fixed directory access check for the SMB back-end
     - fixed DBI_PERSISTENT feature
     - added read-only back-end wrapper RO 
     - added some missing extension hooks
     - fixed properties bug reported by Harald Strack @ ssystems
     - add extension configuration support
     - improved back-end configuration support
0.8.6: 2013/7/8
     - fixed cookie related bug
     - added head toggle
     - fixed file link sorting bug
     - fixed SMB share alias bug
     - fixed SMB secure flag related Zip download bug
     - fixed navigation while loading bug
     - added column setup support to the simple view
     - added context menu to the simple view
     - fixed SysInfo and PropertiesViewer extension do not work bug 

0.8.5: 2013/21/5
     - fixed text save bug 
     - fixed AFS related uppercase username bug
     - repo update
     - fixed symlink on virtual link bug
     - added simple view 
     - fixed unreadable but writeable file move bug
     - fixed AFS performance bug
     - fixed ZIP file upload bug
     - fixed missing modules in checkenv script bug
     - fixed potential security bug reported by Jose Marques <jmcm1@st-andrews.ac.uk>

0.8.4: 2013/18/3
     - fixed typos in doc
     - fixed security bug in helper/webdavwrapper-krb.c
     - added Speedy support for the AFS backend
     - fixed missing content-length in thumbnail responses bug
     - fixed missing cache control 
     - fixed ACL bug (thanx Thomas Klose <thomas.klose@gmx.com>)
     - added wrappers for a mod_auth_kerberos free authentication for SMB and AFS backend
     - added username/password/workgroup authentication support for SMB backend
     - improved logout-dist script (thanx Christan Affolter <christian.affolter@purblehaze.ch>
     - fixed quota related insufficient storage bug reported by Jean-François Brison

0.8.3: 2012/6/6
     - fixed typos
     - added virtual link support to the FS/AFS/GFS backends