@@ -8,6 +8,7 @@
      - fixed properties bug reported by Harald Strack @ ssystems
      - add extension configuration support
      - improved back-end configuration support
+     - added event handling for extensions
 0.8.6: 2013/7/8
      - fixed cookie related bug
      - added head toggle
